GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Live Agent Sessions</relationshipLabel>
    <relationshipName>Live_Agent_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>