GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Chats_Taken_Per_Hours_Average__c.field-meta.xml
<CustomField>
    <fullName>Chats_Taken_Per_Hours_Average__c</fullName>
    <formula>IF( Hours_Logged_In__c   &gt;=  1,ChatReqEngaged/  Hours_Logged_In__c,NULL)</formula>
    <inlineHelpText>Chats taken / Time spent online (in hours)</inlineHelpText>
    <label>Chats Taken Per Hour (Average)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>