GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Concurrency_Rate_Average__c.field-meta.xml
<CustomField>
    <fullName>Concurrency_Rate_Average__c</fullName>
    <formula>Chats_Taken_Per_Hours_Average__c /(Minutes_Spent_In_Chats__c/60)</formula>
    <inlineHelpText>Chats Per Hour / Hours Spent In Chats</inlineHelpText>
    <label>Concurrency Rate (Average)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>