GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Created_Date_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_For_Reporting__c</fullName>
    <formula>LoginTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (For Reporting)</label>
    <type>Date</type>
</CustomField>