GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Hours_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged_In__c</fullName>
    <formula>Minutes_Logged_In__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Logged In</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>