GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Live_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Live Agent Sessions</relationshipLabel>
    <relationshipName>Live_Agent_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>