GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Logged_in_Interval__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_Interval__c</fullName>
    <formula>IF( CONTAINS(TEXT( LoginTime),&quot;08&quot;) &amp;&amp; CONTAINS(TEXT( LogoutTime),&quot;17&quot; ),&quot;0800 - 1800&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in Interval</label>
    <type>Text</type>
</CustomField>