GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Logged_In__c</fullName>
    <formula>Minutes_Spent_Online__c +  Minutes_Spent_Away__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Logged In</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>