GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Spent_As_Idle__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent_As_Idle__c</fullName>
    <formula>TimeIdle /60</formula>
    <label>Minutes Spent As Idle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>