GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Spent_At_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent_At_Capacity__c</fullName>
    <formula>TimeAtCapacity /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Spent At Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>