GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Spent_Away__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent_Away__c</fullName>
    <formula>TimeInAwayStatus /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Spent Away</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>