GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Spent_In_Chats__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent_In_Chats__c</fullName>
    <formula>TimeInChats /60</formula>
    <label>Minutes Spent In Chats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>