GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Spent_Online__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent_Online__c</fullName>
    <formula>TimeInOnlineStatus /60</formula>
    <label>Minutes Spent Online</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>