GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Minutes_Spent_Online_With_No_Chats__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent_Online_With_No_Chats__c</fullName>
    <formula>Time_Spent_Online_With_No_Chats__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Spent Online With No Chats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>