GearsetPOC/force-app/main/default/objects/LiveAgentSession/fields/Time_Spent_Online_With_No_Chats__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Online_With_No_Chats__c</fullName>
    <formula>(Minutes_Logged_In__c*60)  -  TimeInChats</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent Online With No Chats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>