GearsetPOC/force-app/main/default/objects/LiveAgentSession/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Agent</columns>
    <columns>Name</columns>
    <columns>LoginTime</columns>
    <columns>LogoutTime</columns>
    <columns>Minutes_Spent_Online__c</columns>
    <columns>Concurrency_Rate_Average__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>