GearsetPOC/force-app/main/default/objects/LiveAgentSession/listViews/Corina_Roiescu.listView-meta.xml
<ListView>
    <fullName>Corina_Roiescu</fullName>
    <columns>Agent</columns>
    <columns>Name</columns>
    <columns>LoginTime</columns>
    <columns>LogoutTime</columns>
    <columns>Minutes_Spent_Online__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent</field>
        <operation>contains</operation>
        <value>Roiescu</value>
    </filters>
    <label>Corina Roiescu</label>
    <language>en_US</language>
</ListView>