GearsetPOC/force-app/main/default/objects/LiveAgentSession/listViews/Davide_Bucca.listView-meta.xml
<ListView>
    <fullName>Davide_Bucca</fullName>
    <columns>Agent</columns>
    <columns>Name</columns>
    <columns>LoginTime</columns>
    <columns>LogoutTime</columns>
    <columns>Minutes_Spent_Online__c</columns>
    <columns>CreatedDate</columns>
    <columns>TimeInOnlineStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent</field>
        <operation>contains</operation>
        <value>Bucca</value>
    </filters>
    <label>Davide Bucca</label>
    <language>en_US</language>
</ListView>