GearsetPOC/force-app/main/default/objects/LiveAgentSession/listViews/Ilinca_Moldoveanu.listView-meta.xml
<ListView>
    <fullName>Ilinca_Moldoveanu</fullName>
    <columns>Agent</columns>
    <columns>Name</columns>
    <columns>LoginTime</columns>
    <columns>LogoutTime</columns>
    <columns>Minutes_Spent_Online__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent</field>
        <operation>contains</operation>
        <value>Moldoveanu</value>
    </filters>
    <label>Ilinca Moldoveanu</label>
    <language>en_US</language>
</ListView>