GearsetPOC/force-app/main/default/objects/LiveAgentSession/listViews/Maria_Roxana_Minzu.listView-meta.xml
<ListView>
    <fullName>Maria_Roxana_Minzu</fullName>
    <columns>Agent</columns>
    <columns>Name</columns>
    <columns>LoginTime</columns>
    <columns>LogoutTime</columns>
    <columns>Minutes_Spent_Online__c</columns>
    <columns>CreatedDate</columns>
    <columns>TimeInOnlineStatus</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent</field>
        <operation>contains</operation>
        <value>Minzu</value>
    </filters>
    <label>Maria-Roxana Minzu</label>
    <language>en_US</language>
</ListView>